--- a/0-clean-data/src/clean-officer-assignments.Rmd
+++ b/0-clean-data/src/clean-officer-assignments.Rmd
@@ -24,12 +24,12 @@ officers <-
 ## Officer Roster
 
 * **birth_year**: Birth year of the officer.
-* **appointed_month**: Month officer was appointed.
-* **officer_id**: Unique ID for each officer. Unique identifier.
+* **appointed_month**: The month and year the officer was made an officer. The day is always the first day of the month.
+* **officer_id**: Unique ID for each officer.
 * **officer_race**: Race of the officer.
-* **officer_gender**: Gender of the officer.
+* **officer_gender**: Sex of the officer.
 * **spanish**: Does the officer speak Spanish or not?
-* Uniquely identified by **officer_id**. Unit of observation is a unique officer.
+* Uniquely identified by **officer_id**. The unit of observation is an officer.
 * **Number of officers**: `r nrow(officers)`
 
 ## Shift Assignments
@@ -41,14 +41,14 @@ officers <-
 * **date**: Date of the shift.
 * **shift**: The shift the officer is assigned to.
 * **start_time**: Hour start time of the shift in military time.
-* **end_time**: Hour end of the shift in military time.
+* **end_time**: Hour end time of the shift in military time.
 * **weekday**: Day of the week of the shift.
 * **beat_assigned**: The beat the officer is assigned to.
-* **appointed_month**: Month the officer was appointed. **Dropped as it's redundant**.
-* **months_from_start**: Months between officer appointment and shift date.
-* **months_from_start_sq**: Months between officer appointment and shift date squared. **Dropped as it can be recreated**.
+* **appointed_month**: The month and year the officer was made an officer. **Dropped as it's redundant**.
+* **months_from_start**: The number of months between the officer's appointment date and their shift date.
+* **months_from_start_sq**: The number of months between the officer's appointment date and their shift date, squared. **Dropped as it can be recreated**.
 * **duration**: Length of the shift in hours.
-* Uniquely identified by **officer_id** and **date**. Unit of observation is a specific shift for a unique officer.
+* Uniquely identified by **officer_id** and **date**. The unit of observation is a specific shift for a specific officer.
 * **Number of shift assignments**: `r nrow(assignments)`
 
 ### Notes on the data
@@ -65,12 +65,17 @@ officers <-
 
 ## Match officers to their shift assignments
 
+**shift_id** is added which uniquely identifies a specific shift for a specific officer.  
+
 It's unclear why so many officers don't have a shift assignment. Some of the non-matches are likely due to the fact that this is a roster of every person who ever served as an officer so it includes retired officers (as of when these shift assignments start). Additionally some of the officers listed in the roster likely do not get assigned to patrol shifts due to the nature of their role (e.g. they are in a leadership role).  
 
 More worrisome might be officers who don't get shift assignments for some other, unknown reason which might hurt the validity of the study (e.g. they're being punished or rewarded).
 
 ```{r}
-officer_assignments <- inner_join(assignments, officers, by = "officer_id")
+officer_assignments <-
+    inner_join(assignments, officers, by = "officer_id") %>%
+    mutate(shift_id = row_number())
+
 anti_join_assignments <- anti_join(assignments, officers, by = "officer_id")
 anti_join_officers <- anti_join(officers, assignments, by = "officer_id")
 write_csv(officer_assignments,
